cfn/msk-cluster.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: This template creates Amazon MSK Cluster with two brokers.

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
  VpcId:
    Description: The ID of the VPC for security group
    Type: String
  PrivateSubnet1:
    Description: First subnet forAmazon MSK broker
    Type: String
  PrivateSubnet2:
    Description: Second subnet for MSK broker
    Type: String
  MSKClusterConfigurationArn:
    Description: MSK Cluster COnfiguration ARN
    Type: String

Resources:
  MSKSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group attached to MSK broker instances"
      GroupName: "msk-sg"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 9096
          ToPort: 9096
          CidrIp: 0.0.0.0/0
          Description: "communicate with brokers by using SASL/SCRAM"
        - IpProtocol: tcp
          FromPort: 2181
          ToPort: 2181
          CidrIp: 0.0.0.0/0
          Description: "communicate with Apache ZooKeeper by using default port"

  MSKCluster:
    Type: "AWS::MSK::Cluster"
    Properties:
      ClusterName: !Ref EnvironmentName
      KafkaVersion: 2.6.2
      NumberOfBrokerNodes: 2
      BrokerNodeGroupInfo:
        InstanceType: kafka.t3.small
        StorageInfo:
          EBSStorageInfo:
            VolumeSize: 1
        ClientSubnets:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
        SecurityGroups:
          - !Ref MSKSecurityGroup
        # SecurityGroups:
        #   - ReplaceWithSecurityGroupId
      ClientAuthentication:
        Sasl:
          Scram:
            Enabled: true
      LoggingInfo:
        BrokerLogs:
          S3:
            Enabled: true
            Bucket: msk-test-bucket2
          CloudWatchLogs:
            Enabled: false
          Firehose:
            Enabled: false
      ConfigurationInfo:
        Arn: !Ref MSKClusterConfigurationArn
        Revision: 1
